# office-metadata-editor

./: .cspell.json  .gitignore  .npmrc  .prettierrc  GROWTH_PLAYBOOK.md  LICENSE  README.md  SEO_TDK.md  components.json  eslint.config.js  index.html  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  r.md  seo_plan.md  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.json
.claude/hooks/: seo-geo-edit.sh  seo-geo-prompt.sh
app/: client-layout.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
app/[locale]/: layout.tsx  not-found-content.tsx  not-found.tsx  page.tsx
app/batch/: layout.tsx  page.tsx
app/blog/: layout.tsx  page.tsx
app/editor/: layout.tsx  page.tsx
components/: theme-provider.tsx
components/layouts/: om-footer.tsx  (+4 more)
contexts/: file-context.tsx  metadata-context.tsx
docs/: geo-monitoring.md  seo.md  v1.md  v2.md
hooks/: useWasmWorker.ts
i18n/: language-switcher.tsx  request.ts  routing.ts
lib/: app-config.ts  tauri.ts  utils.ts  web-file-picker.ts
messages/: en.json  zh-CN.json
public/: llms.txt  robots.txt
scripts/: verify-clean.selftest.ts
seo/: faq-keys.ts  generate-json-ld.ts  generate-seo-metadata.ts  seo-map.ts  seo-types.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-wasm/: Cargo.toml
src-wasm/.cargo/: config.toml
src-wasm/libz-sys-mock/: Cargo.toml
src-wasm/libz-sys-mock/src/: lib.rs
src-wasm/src/: lib.rs
styles/: base.css  chrome.css
types/: tauri-plugin-dialog.d.ts
(+161 files in other folders)
