[package]
name = "office-metadata-parser-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lopdf = { version = "0.33.0", default-features = false, features = ["pom_parser"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate-zlib"] }
quick-xml = { version = "0.36.0", features = ["serialize"] }
log = "0.4"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }

[patch.crates-io]
libz-sys = { path = "./libz-sys-mock" }
